add information on GPU

--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 # Packages needed to run the job on GPUs:
 # cudatoolkit=9.0, cudnn=7, tensorflow-gpu==1.12.0
+# If the script doesn't want to run on GPU, comment: - tensorflow==1.12.0
 #
 name: myconda
 channels:
